--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de monitoreo C&V</title>
+    <title>Sistema de monitoreo C&t V</title>
   </head>
   <body>
     <div id="root"></div>
